changed to mine

--- a/entries/entry1/final/index.html
+++ b/entries/entry1/final/index.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html>  
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-	  <link rel="stylesheet" type="text/css" href="style.css">
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,
+  initial-scale=1">
+  <title>Transit Tales Weekly</title>
 </head>
+    
 <body>
-	<h1>Welcome</h1>
+
+ <h1>
+   <center>This Week in Astrology</center>
+ </h1>
+
+ <h2>
+   <center>New Moon in Virgo</center>
+ </h2>
+
+  <hr>
+   <marquee behavior=alternate width=”202″ scrollamount=”8″ scrolldelay=”95″ height=”37″ bgcolor=”#29c387”>
+    <strong>The NEW MOON occurs on Thursday, September 14th, 2023, at 9:40 PM EDT. </strong>
+   </marquee>
+  <hr>
+
+    <p>A time of new beginnings, this New Moon presents an excellent opportunity for us to formulate some goals regarding “all things Virgo.” We’d do well to concentrate on new ways to get our day-to-day life organized. Check out what you want to try:</p>
+
+
+    <input type= "checkbox"> 1. building our powers of healthy, constructive discrimination<br>
+    <input type= "checkbox"> 2. rolling up our sleeves and getting down to some serious work<br>
+    <input type="checkbox"> 3. beginning a new project that requires attention to details<br>
+    <input type="checkbox"> 4. starting a health regime, researching nutrition and nourishment, and paying attention to our diet
+
+<h3>Signs Affected The Most</h3>
+
+  <ul>
+   <li>
+     <label for="Signs">Gemini:</label>
+       <meter id="Sings" min="0" max="100" low="0" high="10" optimum="50" value="85">at 85/100</meter>
+   </li> 
+
+  <br>
+
+   <li> 
+     <label for="Signs">Virgo:</label>
+       <meter id="Sings" min="0" max="100" low="0" high="10" optimum="50" value="90">at 90/100</meter>
+   </li> 
+
+  <br>
+
+   <li> 
+     <label for="Signs">Saggittarius:</label>
+      <meter id="Sings" min="0" max="100" low="0" high="10" optimum="50" value="80">at 80/100</meter>
+   </li>
+
+  <br>
+
+   <li> 
+    <label for="Signs">Pisces:</label>
+     <meter id="Sings" min="0" max="100" low="0" high="10" optimum="50" value="75">at 75/100</meter>
+   </li>
+    
+  <br>
+<br> 
+<form><fieldset>
+<legend>Are you one of these?</legend>
+Yes <input name="yes" type="radio" value="yes" />
+
+No <input name="no" type="radio" value="no" />
+</fieldset>
+</form>
+<br>
+<br>
+<details>
+
+  <summary>
+    <center>OPEN FOR BONUS VISION</center>
+    </summary>
+ 
+  <em> 
+    <center> <br> Mercury is in Retrograde :( </center>
+  </em>
+ 
+</details>
+
+
 </body>
 </html>
