--- a/entries/entry3/final/index.html
+++ b/entries/entry3/final/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="Style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://use.typekit.net/puw4jom.css">
  <link rel="stylesheet" href="https://use.typekit.net/sqr7fea.css">
  <link rel="stylesheet" href="https://use.typekit.net/sqr7fea.css">
