--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <li><a href="entries/entry1/final/index.html">Entry 1</a></li>
       <li><a href="entries/entry2/final/index.html">Entry 2</a></li>
       <li><a href="entries/entry3/final/index.html">Entry 3</a></li>
-      <li><a herf="entries/entry4/final/index.html">Entry 4</a></li>
+      <li><a href="entries/entry4/final/index.html">Entry 4</a></li>
     </ol>
 </body>
 </html>
