--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <li><a href="entries/entry2/final/index.html">Entry 2</a></li>
       <li><a href="entries/entry3/final/index.html">Entry 3</a></li>
       <li><a href="entries/entry4/final/index.html">Entry 4</a></li>
+      <li><a href="entries/entry5/final/index.html">Entry 5</a></li>
+
     </ol>
 </body>
 </html>
