--- a/entries/entry5/final/index.html
+++ b/entries/entry5/final/index.html
@@ -79,10 +79,47 @@
     <center>
 <div class="image-text-container">
         <div class="image-text">
-            New Moon!
+            New Moon!  </div>
+
         </div>
     </div>
     </center>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br><br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p class=info>The NEW MOON/Solar Eclipse occurs on Saturday, October 14th, 2023, at 1:55 PM EDT. </p>
+
+<br>
+<br>
+<br>
+
+
+<p class=textt>The New Moon in the sign of Libra starts a good cycle in which to commit to personal goals that express the positive energies of the sign of the Scales.
+
+We have a chance to build our negotiating skills without compromising our principles or needs, and without resorting to appeasement. It’s a time to work on re-balancing our relationships and to recognize our partners as teammates rather than adversaries.
+
+. </p>
+
 
 
 </body>
