--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="entries/entry3/final/index.html">Entry 3</a></li>
       <li><a href="entries/entry4/final/index.html">Entry 4</a></li>
       <li><a href="entries/entry5/final/index.html">Entry 5</a></li>
+      <li><a href="entries/entry6/final/index.html">Entry 6</a></li>
 
     </ol>
 </body>
