--- a/entries/entry2/final/index.html
+++ b/entries/entry2/final/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
   <title>Transit Tales Weekly</title>
 </head>
     
@@ -97,6 +98,7 @@
  <hr color="524079" />
 <br>
      <h4>Signs Affected The Most</h3>
+<div>      
  <ol>
   <li>Mutable signs</li>
   <br>
@@ -157,6 +159,7 @@
   </ul>
 
 </ol>
+</div>
 
 <br>
 <br>
@@ -173,17 +176,7 @@ No <input name="no" type="radio" value="no" />
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br> 
+
 
 </body>
 </html>
