--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-  <title></title>
+  <title>Transit Tales Weekly</title>
 </head>
 <body>
-
     <ol>
-      <li><a href="entries/entry1/final/index.html">Entry 1</a></li>
-      <li><a href="entries/entry2/final/index.html">Entry 2</a></li>
-      <li><a href="entries/entry3/final/index.html">Entry 3</a></li>
-      <li><a href="entries/entry4/final/index.html">Entry 4</a></li>
-      <li><a href="entries/entry5/final/index.html">Entry 5</a></li>
-      <li><a href="entries/entry6/final/index.html">Entry 6</a></li>
-
+      <li><a href="entries/entry1/final/index.html">New Moon in Virgo</a></li>
+      <li><a href="entries/entry2/final/index.html">First Quater Moon in Virgo</a></li>
+      <li><a href="entries/entry3/final/index.html">Full Moon</a></li>
+      <li><a href="entries/entry4/final/index.html">Last Quarter Moon</a></li>
+      <li><a href="entries/entry5/final/index.html">New Moon in Libra</a></li>
+      <li><a href="entries/entry6/final/index.html">First Quater Moon in Libra</a></li>
     </ol>
 </body>
+<h1>Transit Tales Weekly</h1>
+  <p>an insightful exploration of lunar astrology,<br> offering weekly entries that dissect the nuances of lunar phases, <br> their precise timing, and the profound meanings they hold in the realm of astrology.</p>
 </html>
