--- a/entries/entry1/final/index.html
+++ b/entries/entry1/final/index.html
@@ -4,32 +4,44 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,
   initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://use.typekit.net/pje1eze.css">
+  <link rel="stylesheet" href="https://use.typekit.net/pje1eze.css">
   <title>Transit Tales Weekly</title>
 </head>
     
 <body>
-
  <h1>
-   <center>This Week in Astrology</center>
+   <center>Transit Tales Weekly</center>
  </h1>
+<p class=info>Transit Tales Weekly presents the lunar phase this week<br>
+september 10tth-16th</p>
 
- <h2>
+  <hr>
+   <marquee behavior=alternate width=”202″ scrollamount=”8″ scrolldelay=”95″ height=”37″ bgcolor=>
+    <strong>The NEW MOON occurs on Thursday, September 14th, 2023, at 9:40 PM EDT. </strong>
+   </marquee>
+<h2>
    <center>New Moon in Virgo</center>
  </h2>
 
-  <hr>
-   <marquee behavior=alternate width=”202″ scrollamount=”8″ scrolldelay=”95″ height=”37″ bgcolor=”#29c387”>
-    <strong>The NEW MOON occurs on Thursday, September 14th, 2023, at 9:40 PM EDT. </strong>
-   </marquee>
-  <hr>
+<br>
+<br>
+<br>
+<br><br>
+<br>
+<br>
+<br>
+<br>
+    <p>A time of new beginnings, this New Moon presents an excellent opportunity for us to formulate some goals regarding “all things Virgo.” <br> We’d do well to concentrate on new ways to get our day-to-day life organized. Check out what you want to try:</p>
 
-    <p>A time of new beginnings, this New Moon presents an excellent opportunity for us to formulate some goals regarding “all things Virgo.” We’d do well to concentrate on new ways to get our day-to-day life organized. Check out what you want to try:</p>
-
-
+<p>
     <input type= "checkbox"> 1. building our powers of healthy, constructive discrimination<br>
     <input type= "checkbox"> 2. rolling up our sleeves and getting down to some serious work<br>
     <input type="checkbox"> 3. beginning a new project that requires attention to details<br>
     <input type="checkbox"> 4. starting a health regime, researching nutrition and nourishment, and paying attention to our diet
+  </p>
 
 <h3>Signs Affected The Most</h3>
 
