--- a/entries/entry4/final/index.html
+++ b/entries/entry4/final/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
+   <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
 	<title>Transit Tales Weekly</title>
 </head>
 <body>
