--- a/entries/entry4/final/index.html
+++ b/entries/entry4/final/index.html
@@ -52,7 +52,7 @@
     </summary>
  
   <em> 
-    <center> <br> The Last Quarter Moon phase points to a crisis of consciousness. After basking in the awareness symbolized by the full light of the Moon at the time of last week’s Full Moon, we disperse our knowledge and come to a point when we need to sort out what works for us–and what doesn’t–in preparation for next week’s New Moon, when something new is born once again. </center>
+    <center> <br> The Last Quarter Moon phase points to a crisis of consciousness.<br> After basking in the awareness symbolized by the full light of the Moon at the time of last week’s Full Moon, <br> we disperse our knowledge and come to a point when we need to sort out <br> what works for us–and what doesn’t–in preparation for next week’s New Moon, <br>when something new is born once again. </center>
   </em>
  
 </details>
