--- a/entries/entry5/final/index.html
+++ b/entries/entry5/final/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
   <link rel="stylesheet" href="https://use.typekit.net/xhd0kmk.css">
+  <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
 	<title>Transit Tales Weekly</title>
 </head>
 <body>
