--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<h1>Transit <span id=tales>Tales</span> Weekly</h1>
+<h1>Transit <br> <span id=tales>Tales</span> <br> Weekly</h1>
 
   <p>An insightful exploration of lunar astrology, offering weekly entries that dissect <br> the nuances of lunar phases,  their precise timing, and the profound 
   <br>meanings they hold in the realm of astrology.</p>
@@ -24,7 +24,7 @@
 <br>
 <br>
 
-<div>.</div>
+<div class=moon>.</div>
 
 <br>
 
