--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<h1>Transit <br> <span id=tales>Tales</span> <br> Weekly</h1>
+<h1>Transit <br> <span id=tales>Tales</span> <br>Weekly</h1>
 
   <p>An insightful exploration of lunar astrology, offering weekly entries that dissect <br> the nuances of lunar phases,  their precise timing, and the profound 
   <br>meanings they hold in the realm of astrology.</p>
@@ -35,11 +35,18 @@
 <p class=fm><a href="entries/entry3/final/index.html">Full Moon</a></p>
 <p class=lqm><a href="entries/entry4/final/index.html">Last Quarter Moon</a></p>
 <p class=nml><a href="entries/entry5/final/index.html">New Moon in Libra</a></p>
-<p class=fql><a href="entries/entry6/final/index.html">First Quater Moon in Libra
-</a></p>
+<p class=fql><a href="entries/entry6/final/index.html">First Quater Moon in Libra</a></p>
+<p class=fql><a href="entries/entry7/final/index.html">Last Quarter Moon in Scorpio</a></p>
 </div>
 
-
+    <div class="moon-phases">
+        <div class="moon-phase new-moon-virgo">New Moon in Virgo</div>
+        <div class="moon-phase first-quarter-virgo">First Quarter Moon in Virgo</div>
+        <div class="moon-phase full-moon">Full Moon</div>
+        <div class="moon-phase last-quarter">Last Quarter Moon</div>
+        <div class="moon-phase new-moon-libra">New Moon in Libra</div>
+        <div class="moon-phase first-quarter-libra">First Quarter Moon in Libra</div>
+    </div>
 
 </ol>
 
