--- a/entries/entry7/final/index.html
+++ b/entries/entry7/final/index.html
@@ -10,6 +10,37 @@
 	<title>Transit Tales Weekly</title>
 </head>
 <body>
+ <div>
      <h1>Transit<span id=tales>Tales</span>Weekly</h1>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <div class=info>TTW present the lunar transit phase from <br> November 5-11 2023
+     </div>
+
+
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="50px" y="50px"
+	 viewBox="0 0 72 72" style="enable-background:new 0 0 72 72;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:#E6E7E8;}
+</style>
+<polygon class="st0" points="37.59,12.65 44.51,26.68 60,28.93 48.79,39.85 51.44,55.28 37.59,47.99 23.74,55.28 26.38,39.85 
+	15.18,28.93 30.66,26.68 " x="50px" y="50px"/>
+</svg>
+
+
 </body>
 </html>
+
