--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <p class=nml><a href="entries/entry5/final/index.html">New Moon in Libra</a></p>
 <p class=fql><a href="entries/entry6/final/index.html">First Quater Moon in Libra</a></p>
 <p class=fql><a href="entries/entry7/final/index.html">Last Quarter Moon in Scorpio</a></p>
+<p class=fql><a href="entries/entry8/final/index.html">New Moon in Scorpio</a></p>
 </div>
 
     <div class="moon-phases">
