--- a/entries/entry9/final/index.html
+++ b/entries/entry9/final/index.html
@@ -37,11 +37,11 @@
         <label for="colorPicker">Select Background Color:</label>
         <input type="color" id="colorPicker" list="presetColors">
         <datalist id="presetColors">
-            <option>#000000</option> <!-- Black -->
-            <option>#333333</option> <!-- Dark Gray -->
-            <option>#7a2ce8</option> <!-- Purple -->
-            <option>#4a148c</option> <!-- Dark Purple -->
-            <option>#ffffff</option> <!-- White -->
+            <option>#000000</option> 
+            <option>#333333</option> 
+            <option>#7a2ce8</option> 
+            <option>#4a148c</option> 
+            <option>#ffffff</option> 
         </datalist>
     </section>
     <br>
