--- a/index.html
+++ b/index.html
@@ -29,16 +29,17 @@
 <br>
 
 <div>
-<p class=nmv><a href="entries/entry1/final/index.html">New Moon in Virgo</a></p>
-<p class=fqv><a href="entries/entry2/final/index.html">First Quater Moon in Virgo
-</a></p>
-<p class=fm><a href="entries/entry3/final/index.html">Full Moon</a></p>
-<p class=lqm><a href="entries/entry4/final/index.html">Last Quarter Moon</a></p>
-<p class=nml><a href="entries/entry5/final/index.html">New Moon in Libra</a></p>
-<p class=fql><a href="entries/entry6/final/index.html">First Quater Moon in Libra</a></p>
-<p class=fql><a href="entries/entry7/final/index.html">Last Quarter Moon in Scorpio</a></p>
-<p class=fql><a href="entries/entry8/final/index.html">New Moon in Scorpio</a></p>
-<p class=fql><a href="entries/entry9/final/index.html">First Quarter Moon in Scorpio</a></p>
+    <p class=nmv><a href="entries/entry1/final/index.html">New Moon in Virgo</a></p>
+    <p class=fqv><a href="entries/entry2/final/index.html">First Quater Moon in Virgo
+    </a></p>
+    <p class=fm><a href="entries/entry3/final/index.html">Full Moon</a></p>
+    <p class=lqm><a href="entries/entry4/final/index.html">Last Quarter Moon</a></p>
+    <p class=nml><a href="entries/entry5/final/index.html">New Moon in Libra</a></p>
+    <p class=fql><a href="entries/entry6/final/index.html">First Quater Moon in Libra</a></p>
+    <p class=fql><a href="entries/entry7/final/index.html">Last Quarter Moon in Scorpio</a></p>
+    <p class=fql><a href="entries/entry8/final/index.html">New Moon in Scorpio</a></p>
+    <p class=fql><a href="entries/entry9/final/index.html">First Quarter Moon in Scorpio</a></p>
+    <p class=fql><a href="entries/entry9/final/index.html">Full Moon in Scorpio</a></p>
 </div>
 
     <div class="moon-phases">
