--- a/entries/entry1/final/index.html
+++ b/entries/entry1/final/index.html
@@ -4,17 +4,40 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,
   initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
+  <link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xhd0kmk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jfs6aup.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ury3cui.css">
+    <link rel="stylesheet" href="https://use.typekit.net/swu6kfo.css">
+
   <link rel="stylesheet" href="https://use.typekit.net/pje1eze.css">
   <link rel="stylesheet" href="https://use.typekit.net/pje1eze.css">
   <title>Transit Tales Weekly</title>
 </head>
     
 <body>
- <h1>
-   <center>Transit Tales Weekly</center>
- </h1>
+<h1 id="glowText">Transit<span id="tales">Tales</span>Weekly</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
 <p class=info>Transit Tales Weekly presents the lunar phase this week<br>
 september 10tth-16th</p>
 
