--- a/index.html
+++ b/index.html
@@ -24,34 +24,23 @@
 <br>
 <br>
 
-<div class=moon>.</div>
-
 <br>
 
-<div>
-    <p class=nmv><a href="entries/entry1/final/index.html">New Moon in Virgo</a></p>
-    <p class=fqv><a href="entries/entry2/final/index.html">First Quater Moon in Virgo
-    </a></p>
-    <p class=fm><a href="entries/entry3/final/index.html">Full Moon</a></p>
-    <p class=lqm><a href="entries/entry4/final/index.html">Last Quarter Moon</a></p>
-    <p class=nml><a href="entries/entry5/final/index.html">New Moon in Libra</a></p>
-    <p class=fql><a href="entries/entry6/final/index.html">First Quater Moon in Libra</a></p>
-    <p class=fql><a href="entries/entry7/final/index.html">Last Quarter Moon in Scorpio</a></p>
-    <p class=fql><a href="entries/entry8/final/index.html">New Moon in Scorpio</a></p>
-    <p class=fql><a href="entries/entry9/final/index.html">First Quarter Moon in Scorpio</a></p>
-    <p class=fql><a href="entries/entry10/final/index.html">Full Moon in Scorpio</a></p>
+<div class="flex">
+    <a href="entries/entry1/final/index.html">New Moon in Virgo</a>
+    <a href="entries/entry2/final/index.html">First Quater Moon in Virgo
+    </a>
+   <a href="entries/entry3/final/index.html">Full Moon</a>
+    <a href="entries/entry4/final/index.html">Last Quarter Moon</a>
+    <a href="entries/entry5/final/index.html">New Moon in Libra</a>
+    <a href="entries/entry6/final/index.html">First Quater Moon in Libra</a>
+   <a href="entries/entry7/final/index.html">Last Quarter Moon in Scorpio</a>
+    <a href="entries/entry8/final/index.html">New Moon in Scorpio</a>
+    <a href="entries/entry9/final/index.html">First Quarter Moon in Scorpio</a>
+    <a href="entries/entry10/final/index.html">Full Moon in Scorpio</a>
 </div>
 
-    <div class="moon-phases">
-        <div class="moon-phase new-moon-virgo">New Moon in Virgo</div>
-        <div class="moon-phase first-quarter-virgo">First Quarter Moon in Virgo</div>
-        <div class="moon-phase full-moon">Full Moon</div>
-        <div class="moon-phase last-quarter">Last Quarter Moon</div>
-        <div class="moon-phase new-moon-libra">New Moon in Libra</div>
-        <div class="moon-phase first-quarter-libra">First Quarter Moon in Libra</div>
-    </div>
 
-</ol>
 
 </body>
 </html>
