--- a/entries/entry1/final/index.html
+++ b/entries/entry1/final/index.html
@@ -52,20 +52,19 @@ september 10tth-16th</p>
 <br>
 <br>
 <br>
-<br><br>
 <br>
 <br>
 <br>
 <br>
     <p>A time of new beginnings, this New Moon presents an excellent opportunity for us to formulate some goals regarding “all things Virgo.” <br> We’d do well to concentrate on new ways to get our day-to-day life organized. Check out what you want to try:</p>
-
+<br>
 <p>
     <input type= "checkbox"> 1. building our powers of healthy, constructive discrimination<br>
     <input type= "checkbox"> 2. rolling up our sleeves and getting down to some serious work<br>
     <input type="checkbox"> 3. beginning a new project that requires attention to details<br>
     <input type="checkbox"> 4. starting a health regime, researching nutrition and nourishment, and paying attention to our diet
   </p>
-
+<br>
 <h3>Signs Affected The Most</h3>
 
   <ul>
@@ -105,11 +104,15 @@ No <input name="no" type="radio" value="no" />
 </fieldset>
 </form>
 <br>
+<br><br> 
 <br>
+<br> 
+<br>
+
 <details>
 
   <summary>
-    <center>OPEN FOR BONUS VISION</center>
+    <center>Open For Bonus Vision</center>
     </summary>
  
   <em> 
@@ -117,6 +120,12 @@ No <input name="no" type="radio" value="no" />
   </em>
  
 </details>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 </body>
