fix entry 2 and 3

--- a/entries/entry2/final/index.html
+++ b/entries/entry2/final/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
+   <link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xhd0kmk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jfs6aup.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ury3cui.css">
+    <link rel="stylesheet" href="https://use.typekit.net/swu6kfo.css">
+    
+    <link rel="stylesheet" href="https://use.typekit.net/nwp5pad.css">
   <title>Transit Tales Weekly</title>
 </head>
     
@@ -12,13 +19,27 @@
  <p1>
   <hr>
    <marquee behavior=alternate width=”202″ scrollamount=”8″ scrolldelay=”95″ height=”37″ bgcolor="#5B4686">
-    <strong>The FIRST QUARTER MOON occurs on Friday, September 22nd, 2023, at 3:32 PM EDT. </strong>
+    The FIRST QUARTER MOON occurs on Friday, September 22nd, 2023, at 3:32 PM EDT. 
    </marquee>
   <hr> 
   </p1>
 <br>
- <h1>THIS WEEK IN ASTROlOGY</h1>
-  <h2 class="card-subheading">Transit Tales Weekly presents the lunar phase this week <br> september 17th-20th</h2>
+ <h1 id="glowText">Transit<span id="tales">Tales</span>Weekly</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+  <h2 class="sub">Transit Tales Weekly presents the lunar phase this week <br> september 17th-20th</h2>
 
 <br>
 <br>
@@ -92,12 +113,14 @@
 <br>
 <br>
 
-  <h3>First Quarter Moon</h3>
+  <h3 class="first">First Quarter Moon</h3>
      <p>The First Quarter Moon occurs when the Sun in Virgo forms a square to the Moon in Sagittarius. <br> There is a crisis theme surrounding any quarter Moon phase, as we feel compelled to take action. <br> Shortly after, we are made aware of how our actions affect those close to us,<br> perhaps through trial and error.</p>
 <br>
  <hr color="524079" />
 <br>
-     <h4>Signs Affected The Most</h3>
+<br>
+<br>
+     <h4 class="sec">Signs Affected The Most</h4>
 <div>      
  <ol>
   <li>Mutable signs</li>
