--- a/entries/entry4/final/index.html
+++ b/entries/entry4/final/index.html
@@ -6,14 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
    <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
+   <link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xhd0kmk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jfs6aup.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ury3cui.css">
+    <link rel="stylesheet" href="https://use.typekit.net/swu6kfo.css">
 	<title>Transit Tales Weekly</title>
 </head>
 <body>
- <div class="ttw">
- <img class="main" src="imgs/Artboard 1.png">	
-  <div class="left">Transit</div>
-  <div class="right">Tales</div>
-  <div class="centered">Weekly</div>
+<div class="ttw"></div>
+<br>
+<br>
+<br>
+<h1 id="glowText">Transit<span id="tales">Tales</span>Weekly</h1>
 <br>
 <br>
 <br>
@@ -24,17 +29,9 @@
 <br>
 <br>
 <br>
-	
- </div>
 <br>
 <br>
 <br>
-<br> 
-<br>
-<br>
-<br>
-<br> 
-<br> 
 <br> 
  <p class="sub">TTW presents the lunar phase this week, <br> October 1st-7th</p>
 
