--- a/entries/entry6/final/index.html
+++ b/entries/entry6/final/index.html
@@ -10,8 +10,37 @@
     <link rel="stylesheet" href="https://use.typekit.net/eyi1yjo.css">
     <link rel="stylesheet" href="https://use.typekit.net/eyi1yjo.css">
     <link rel="stylesheet" href="https://use.typekit.net/eyi1yjo.css">
+        <link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xhd0kmk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jfs6aup.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ury3cui.css">
+    <link rel="stylesheet" href="https://use.typekit.net/swu6kfo.css">
 </head>
 <body>
+
+ 
+<h1 id="glowText">Transit<span id="tales">Tales</span>Weekly</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+<p class=info> TTW present the lunar transit phase from <br> October 15-21, 2023</p>
+
   <div class="container">
     <div class="item item1">
     <a href="#title">Main</a>
@@ -36,21 +65,23 @@
 <br>
 <br> 
 
- 
-<h1 class=title><a id="title"></a>Transit Tales Weekly</h1>
-
-<p class=info> TTW present the lunar transit phase from <br> October 15-21, 2023</p>
-
 <div class=line><center>
 <img src="imgs/line.png">
 </center>
 </div>
-
+<br>
+<br>
+<br>
+<br>
 <p class=first><a id="first"></a>1st Quarter Moon</p>
 
 <p class=timing><a id="timing"></a>The Fisrt Quarter occurs on Saturday, <br> October 21st, 2023, at 11:29 PM EDT.</p>
 
+<br>
+
 <p class=mean><a id="mean"></a>There is a crisis theme surrounding any quarter Moon phase, as we feel compelled to take action. <br> Shortly after, we are made aware of how our actions affect those close to us, perhaps through trial and error. <br>Whatever project or initiative we began around the New Moon is now off the ground, <br>and it may face its first obstacles.</p>
+
+<br>
 
 <p class=signs><a id="signs"></a>affecting planets at approximately 26 to 30 degrees of <br> the Cardinal signs (Aries, Cancer, Libra, and Capricorn) the most.</p>
 
