--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 
 <div class="flex">
     <a href="entries/entry1/final/index.html">New Moon in Virgo</a>
-    <a href="entries/entry2/final/index.html">First Quater Moon in Virgo
-    </a>
-   <a href="entries/entry3/final/index.html">Full Moon</a>
+    <a href="entries/entry2/final/index.html">First Quater Moon in Virgo</a>
+    <a href="entries/entry3/final/index.html">Full Moon</a>
     <a href="entries/entry4/final/index.html">Last Quarter Moon</a>
     <a href="entries/entry5/final/index.html">New Moon in Libra</a>
     <a href="entries/entry6/final/index.html">First Quater Moon in Libra</a>
