--- a/entries/entry1/final/index.html
+++ b/entries/entry1/final/index.html
@@ -16,8 +16,18 @@
   <link rel="stylesheet" href="https://use.typekit.net/pje1eze.css">
   <title>Transit Tales Weekly</title>
 </head>
-    
 <body>
+  <a href="https://singd123.github.io">
+    Virgo Season
+  </a>  
+  <a href="https://singd123.github.io/entries/entry1/final/index.html">
+    <img src="imgs/newmoon.png">
+
+      <a href="https://singd123.github.io/entries/entry2/final/index.html">
+    <img  class="cres" src="imgs/cres.png">
+  </a>   
+
+  </a>   
 <h1 id="glowText">Transit<span id="tales">Tales</span>Weekly</h1>
 <br>
 <br>
