--- a/entries/entry10/final/index.html
+++ b/entries/entry10/final/index.html
@@ -18,10 +18,16 @@
     <title>Transit Tales Weekly</title>
 </head>
 <body>
+ <a  class="hi"  href="https://singd123.github.io">
+    Gemini Season
+  </a>  
+  <a href="https://singd123.github.io/entries/entry10/final/index.html">
+    <img class="newmoon" src="imgs/newmoon.png">
 
+      <a class="hi" href="https://singd123.github.io/entries/entry9/final/index.html">
+    <img  class="cres" src="imgs/cres.png">
+  </a>   
 <h1 id="glowText">Transit<span id="tales">Tales</span>Weekly</h1>
-<br>
-<br>
 <br>
 <div class=info>
     <div id=time> The FULL MOON occurs on Monday, November 27th, 2023, at 4:16 AM EST. <br> <br>  </div>
