--- a/entries/entry2/final/index.html
+++ b/entries/entry2/final/index.html
@@ -16,6 +16,15 @@
 </head>
     
 <body>
+  <a href="https://singd123.github.io">
+    Virgo Season
+  </a>  
+  <a href="https://singd123.github.io/entries/entry3/final/index.html">
+    <img src="imgs/newmoon.png">
+
+      <a href="https://singd123.github.io/entries/entry2/final/index.html">
+    <img  class="cres" src="imgs/cres.png">
+  </a>    
  <p1>
   <hr>
    <marquee behavior=alternate width=”202″ scrollamount=”8″ scrolldelay=”95″ height=”37″ bgcolor="#5B4686">
