--- a/entries/entry3/final/index.html
+++ b/entries/entry3/final/index.html
@@ -20,6 +20,16 @@
     
 <body>
 
+ <a href="https://singd123.github.io">
+    Libra Season
+  </a>  
+  <a href="https://singd123.github.io/entries/entry2/final/index.html">
+    <img src="imgs/newmoon.png">
+
+      <a href="https://singd123.github.io/entries/entry4/final/index.html">
+    <img  class="cres" src="imgs/cres.png">
+  </a>   
+
 <h1 id="glowText">Transit<span id="tales">Tales</span>Weekly</h1>
 <br>
 <br>
