--- a/entries/entry4/final/index.html
+++ b/entries/entry4/final/index.html
@@ -14,6 +14,16 @@
 	<title>Transit Tales Weekly</title>
 </head>
 <body>
+
+  <a href="https://singd123.github.io">
+    libra Season
+  </a>  
+  <a href="https://singd123.github.io/entries/entry3/final/index.html">
+    <img src="imgs/newmoon.png">
+
+      <a href="https://singd123.github.io/entries/entry5/final/index.html">
+    <img  class="cres" src="imgs/cres.png">
+  </a>    
 <div class="ttw"></div>
 <br>
 <br>
@@ -39,9 +49,18 @@
 <br> 
 <br> 
 <br> 
+<br> 
+<br> 
+<br> 
 
-<p class="scroll"><span class="text">I</span> </p>
 
+<div class="scroll"> <br>
+<br>
+<br>Guess the phase</div>
+<br> 
+<br> <br> 
+<br> 
+<br> 
 <details>
 
   <summary>
