--- a/entries/entry5/final/index.html
+++ b/entries/entry5/final/index.html
@@ -10,6 +10,17 @@
 	<title>Transit Tales Weekly</title>
 </head>
 <body>
+
+  <a href="https://singd123.github.io">
+    Libra Season
+  </a>  
+  <a href="https://singd123.github.io/entries/entry1/final/index.html">
+    <img src="imgs/newmoon.png">
+
+      <a href="https://singd123.github.io/entries/entry2/final/index.html">
+    <img  class="cres" src="imgs/cres.png">
+  </a>   
+   
 <div class=container>  <br>
 <br>
 <br>
