--- a/entries/entry6/final/index.html
+++ b/entries/entry6/final/index.html
@@ -18,6 +18,16 @@
 </head>
 <body>
 
+ <a  class="hi"  href="https://singd123.github.io">
+    Libra Season
+  </a>  
+  <a href="https://singd123.github.io/entries/entry5/final/index.html">
+    <img class="newmoon" src="imgs/newmoon.png">
+
+      <a class="hi" href="https://singd123.github.io/entries/entry7/final/index.html">
+    <img  class="cres" src="imgs/cres.png">
+  </a>   
+
  
 <h1 id="glowText">Transit<span id="tales">Tales</span>Weekly</h1>
 <br>
@@ -104,8 +114,7 @@
 </div>
 
 <center>
-<p class=bonus> <a id="bonus"></a>
-    <button><span>Bonus!</span></button>
+<p class=bonus id="bonus">     <button><span>Bonus!</span></button>
     
 </p>
 </center>
