--- a/entries/entry7/final/index.html
+++ b/entries/entry7/final/index.html
@@ -8,9 +8,31 @@
 	<link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
   <link rel="stylesheet" href="https://use.typekit.net/xhd0kmk.css">
   <link rel="stylesheet" href="https://use.typekit.net/jfs6aup.css">
+  <link rel="stylesheet" href="https://use.typekit.net/eyi1yjo.css">
+    <link rel="stylesheet" href="https://use.typekit.net/eyi1yjo.css">
+    <link rel="stylesheet" href="https://use.typekit.net/eyi1yjo.css">
+    <link rel="stylesheet" href="https://use.typekit.net/eyi1yjo.css">
+    <link rel="stylesheet" href="https://use.typekit.net/eyi1yjo.css">
+        <link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xhd0kmk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jfs6aup.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ury3cui.css">
+    <link rel="stylesheet" href="https://use.typekit.net/swu6kfo.css">
 	<title>Transit Tales Weekly</title>
 </head>
 <body>
+
+ <a href="https://singd123.github.io">
+    Scorpio Season
+  </a>  
+  <a href="https://singd123.github.io/entries/entry6/final/index.html">
+    <img src="imgs/newmoon.png">
+
+      <a href="https://singd123.github.io/entries/entry8/final/index.html">
+    <img  class="cres" src="imgs/cres.png">
+  </a>   
+
+
  <div>
      <h1>Transit<span id=tales>Tales</span>Weekly</h1>
      <br>
