--- a/entries/entry8/final/index.html
+++ b/entries/entry8/final/index.html
@@ -15,6 +15,16 @@
 </head>
 <body>
 
+ <a  class="hi"  href="https://singd123.github.io">
+    Scorpio Season
+  </a>  
+  <a href="https://singd123.github.io/entries/entry9/final/index.html">
+    <img class="newmoon" src="imgs/newmoon.png">
+
+      <a class="hi" href="https://singd123.github.io/entries/entry8/final/index.html">
+    <img  class="cres" src="imgs/cres.png">
+  </a>   
+
 <h1 id="glowText">Transit<span id="tales">Tales</span>Weekly</h1>
 
 <br>
