--- a/entries/entry9/final/index.html
+++ b/entries/entry9/final/index.html
@@ -14,6 +14,15 @@
     <title>Transit Tales Weekly</title>
 </head>
 <body>
+ <a  class="hi"  href="https://singd123.github.io">
+    Scorpio Season
+  </a>  
+  <a href="https://singd123.github.io/entries/entry8/final/index.html">
+    <img class="newmoon" src="imgs/newmoon.png">
+
+      <a class="hi" href="https://singd123.github.io/entries/entry10/final/index.html">
+    <img  class="cres" src="imgs/cres.png">
+  </a>   
 
 <h1 id="glowText">Transit<span id="tales">Tales</span>Weekly</h1>
 <br>
