--- a/entries/entry5/final/index.html
+++ b/entries/entry5/final/index.html
@@ -7,6 +7,11 @@
 	<link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
   <link rel="stylesheet" href="https://use.typekit.net/xhd0kmk.css">
   <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
+      <link rel="stylesheet" href="https://use.typekit.net/ing7kde.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xhd0kmk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jfs6aup.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ury3cui.css">
+    <link rel="stylesheet" href="https://use.typekit.net/swu6kfo.css">
 	<title>Transit Tales Weekly</title>
 </head>
 <body>
@@ -21,59 +26,22 @@
     <img  class="cres" src="imgs/cres.png">
   </a>   
    
-<div class=container>  <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br> 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br> 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br> 
-<br>
-<br>
-<br>
-<br>
-<br> 
-<br>
-  <p class=main>Transit <span id=tales>Tales</span> Weekly</p>
- <br>
-<br>
-<br>
-<br> 
-<br> 
- <br>
-<br>
-<br>
-<br> 
-<br> 
- <br>
-<br>
-<br>
-<br> 
-<br> 
-<center>
-<img class="moon" src="imgs/moon.png" alt="Moon Image">
-</center>
-<center>
-<img class="libra-constellation" src="imgs/libra.png" alt="Libra Constellation">
-</center>
-    </div>
+ <h1>Transit<span id=tales>Tales</span>Weekly</h1>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
     <br>
 <br>
 <br> 
