--- a/entries/entry7/final/index.html
+++ b/entries/entry7/final/index.html
@@ -26,12 +26,11 @@
     Scorpio Season
   </a>  
   <a href="https://singd123.github.io/entries/entry6/final/index.html">
-    <img src="imgs/newmoon.png">
+    <img class="new" src="imgs/newmoon.png">
 
       <a href="https://singd123.github.io/entries/entry8/final/index.html">
     <img  class="cres" src="imgs/cres.png">
   </a>   
-
 
  <div>
      <h1>Transit<span id=tales>Tales</span>Weekly</h1>
@@ -52,10 +51,31 @@
      <br>
      <div class=info>TTW present the lunar transit phase from <br> November 5-11 2023
      </div>
+<br>
 
+<div class="allstar">
 
+<div class="star1">
+	 <img src="imgs/stars1.png">
+</div>
 
+<div class="star2">
+	 <img src="imgs/stars2.png">
+</div>
 
+<div class="star3">
+	 <img src="imgs/stars3.png">
+</div>
+
+<div class="star4">
+	 <img src="imgs/stars4.png">
+</div>
+
+</div>
+<br>
+<br>
+<br>
+<br>
 
 <div class=last> Last Quarter Moon </div>
 
@@ -77,7 +97,6 @@
 <br>
 
 	
-</div>
 
 </body>
 </html>
