--- a/entries/entry7/final/index.html
+++ b/entries/entry7/final/index.html
@@ -31,7 +31,7 @@
       <a href="https://singd123.github.io/entries/entry8/final/index.html">
     <img  class="cres" src="imgs/cres.png">
   </a>   
-
+ <img class="allstar" src="imgs/allstar.png">
  <div>
      <h1>Transit<span id=tales>Tales</span>Weekly</h1>
      <br>
@@ -51,25 +51,8 @@
      <br>
      <div class=info>TTW present the lunar transit phase from <br> November 5-11 2023
      </div>
-<br>
 
-<div class="allstar">
 
-<div class="star1">
-	 <img src="imgs/stars1.png">
-</div>
-
-<div class="star2">
-	 <img src="imgs/stars2.png">
-</div>
-
-<div class="star3">
-	 <img src="imgs/stars3.png">
-</div>
-
-<div class="star4">
-	 <img src="imgs/stars4.png">
-</div>
 
 </div>
 <br>
