--- a/entries/entry5/final/index.html
+++ b/entries/entry5/final/index.html
@@ -19,13 +19,15 @@
   <a href="https://singd123.github.io">
     Libra Season
   </a>  
-  <a href="https://singd123.github.io/entries/entry1/final/index.html">
+  <a href="https://singd123.github.io/entries/entry6/final/index.html">
     <img src="imgs/newmoon.png">
 
-      <a href="https://singd123.github.io/entries/entry2/final/index.html">
+      <a href="https://singd123.github.io/entries/entry4/final/index.html">
     <img  class="cres" src="imgs/cres.png">
   </a>   
-   
+   <div id='stars'></div>
+<div id='stars2'></div>
+<div id='stars3'></div>
  <h1>Transit<span id=tales>Tales</span>Weekly</h1>
      <br>
      <br>
@@ -43,55 +45,15 @@
      <br>
      <br>
     <br>
-<br>
-<br> 
-<br> 
- <br>
-<br>
-<br>
-<br> 
-<br> 
- <br>
-<br>
-<br>
-<br> 
-<br> 
-    <center>
-<div class="image-text-container">
-        <div class="image-text">
-            New Moon!  </div>
 
-        </div>
-    </div>
-    </center>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br><br>
-<br>
-<br>
-<br>
-<br>
+<div class="bg"> 
+    <div class="neww ">New Moon!</div>
 <br>
 <br>
 <br>
 <p class=info>The NEW MOON/Solar Eclipse occurs on Saturday, October 14th, 2023, at 1:55 PM EDT. </p>
 
-<br>
-<br>
-<br>
+
 
 
 <p class=textt>The New Moon in the sign of Libra starts a good cycle in which to commit to personal goals that express the positive energies of the sign of the Scales.
@@ -99,8 +61,8 @@
 We have a chance to build our negotiating skills without compromising our principles or needs, and without resorting to appeasement. It’s a time to work on re-balancing our relationships and to recognize our partners as teammates rather than adversaries.
 
 . </p>
-
-
+<br>
+</div>
 
 </body>
 </html>
