--- a/entries/entry7/final/index.html
+++ b/entries/entry7/final/index.html
@@ -34,7 +34,7 @@
   <div class=info>TTW present the lunar transit phase from <br> November 5-11 2023
      </div>
 
-<div class="allstar" > <img class="" src="imgs/allstar.png"> </div>
+<div class="allstar" > <img src="imgs/allstar.png"> </div>
  <div>
      <h1>Transit<span id=tales>Tales</span>Weekly</h1>
      
